--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>oscarmusic</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+    <script src="https://oscarsm13.github.io/curso-platzi-vue/dist/build.js"></script>
+</body>
+
 </html>
